[gd_scene load_steps=15 format=1]

[ext_resource path="res://scripts/game/source/2/village/village.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/game/source/2/village/bg.jpg" type="Texture" id=3]
[ext_resource path="res://assets/game/source/2/village/door.png" type="Texture" id=4]
[ext_resource path="res://assets/game/source/2/village/casino_front.png" type="Texture" id=5]
[ext_resource path="res://assets/game/source/2/village/fl√®che.png" type="Texture" id=6]
[ext_resource path="res://scenes/game/character.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/game/juliette.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/game/cinematic.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 169.907 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 14.8335, 149.468 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 43.9222 )

[sub_resource type="Animation" id=4]

resource/name = "enterVillage"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("character/AnimatedSprite/AnimationPlayer:playback/play")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 2,
"values": [ "walking_right", "idle_right" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("character:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 477 ), Vector2( 500, 477 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("juliette:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -150, 490 ), Vector2( 350, 490 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("juliette/Sprite/AnimationPlayer:playback/play")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 2,
"values": [ "walking_right", "idle_right" ]
}

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 36.3176, 226.621 )

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="gui" parent="." instance=ExtResource( 2 )]

[node name="bg" type="Sprite" parent="."]

transform/pos = Vector2( 1088.79, 267.421 )
transform/scale = Vector2( 4, 4 )
z/z = -1
texture = ExtResource( 3 )

[node name="leftLimit" type="StaticBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( -18.372, 487.693 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftLimit"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="rightLimit" type="StaticBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 1802.18, 487.693 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightLimit"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="backToEntry" type="Node2D" parent="." groups=[
"canInteractObjects",
]]

editor/display_folded = true
transform/pos = Vector2( 50, 492.459 )

[node name="hitbox" type="Area2D" parent="backToEntry"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="backToEntry/hitbox"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="casino_door" type="Sprite" parent="." groups=[
"canInteractObjects",
]]

transform/pos = Vector2( 1302.36, 436.382 )
transform/scale = Vector2( 2.3, 2.3 )
texture = ExtResource( 4 )

[node name="casino_front" type="Sprite" parent="casino_door"]

transform/pos = Vector2( -4.45999, -63.5974 )
transform/scale = Vector2( 0.5, 0.5 )
z/z = -1
texture = ExtResource( 5 )

[node name="hitbox" type="Area2D" parent="casino_door"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="casino_door/hitbox"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="arrow" type="Sprite" parent="casino_door"]

transform/pos = Vector2( -273.536, -181.511 )
transform/rot = -31.1786
transform/scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="arrow2" type="Sprite" parent="casino_door"]

transform/pos = Vector2( -127.393, -273.733 )
transform/rot = -66.8634
transform/scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="arrow3" type="Sprite" parent="casino_door"]

transform/pos = Vector2( 116.687, -276.253 )
transform/rot = -113.1
transform/scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="arrow1" type="Sprite" parent="casino_door"]

transform/pos = Vector2( 267.867, -188.566 )
transform/rot = -148.8
transform/scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="character" parent="." instance=ExtResource( 7 )]

transform/pos = Vector2( 0, 477 )

[node name="juliette" parent="." groups=[
"canInteractObjects",
] instance=ExtResource( 8 )]

transform/pos = Vector2( -150, 490 )

[node name="cinematic" parent="." instance=ExtResource( 9 )]

[node name="cinematicAnimation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/enterVillage = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="exit" type="Node2D" parent="." groups=[
"canInteractObjects",
]]

editor/display_folded = true
transform/pos = Vector2( 1759.19, 454.691 )

[node name="hitbox" type="Area2D" parent="exit"]

input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="exit/hitbox"]

shape = SubResource( 5 )
trigger = false
_update_shape_index = 0


